feat(customers): add get customer by user id endpoint
